# texi

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
examples/language_model/: convert_wiki.py  mlm.yaml  train.py
examples/mrc4ner/: mrc4ner.yaml  train.py
examples/spert/: fix_examples.py  main.py  predict.py  spert.py  spert.yaml  train.py
static/: html_character_reference.csv
tests/: test_document.py  test_metrics.py  test_preprocessing.py
tests/apps/: test_ner.py
tests/apps/ner/: test_span_utils.py  test_utils.py
tests/datasets/: test_dataset.py
tests/pytorch/: test_masking.py  test_utils.py
tests/pytorch/metrics/: test_ner.py  test_ner_metrics.py  test_re_metrics.py
tests/pytorch/plm/: test_spert.py
tests/pytorch/transformers/: test_spert.py
tests/tagger/: test_sequence_labeling.py
texi/: __init__.py  document.py  embedding.py  metrics.py  preprocessing.py  text.py  utils.py  vocab.py
texi/annotation/: __init__.py  brat.py  ner.py  parser.py
texi/apps/: __init__.py  ner.py
texi/apps/classification/: train.py
texi/apps/ner/: __init__.py  data.py  eval.py  span_utils.py  utils.py  visualization.py
texi/apps/text_matching/: train.py
texi/datasets/: __init__.py  classification.py  collator.py  dataset.py  question_answering.py  text.py  translation.py
texi/pytorch/: __init__.py  attention.py  logger.py  losses.py  masking.py  metrics.py  optim.py  pooling.py  rnn.py  training.py  utils.py
texi/pytorch/dataset/: __init__.py  classification.py  collator.py  dataset.py  plm_collator.py  question_answering.py  sampler.py  sequence_labeling.py
texi/pytorch/metrics/: __init__.py  general_accuracy.py  mean_reciprocal_rank.py  metrics.py  ner.py  ner_metrics.py  re.py  re_metrics.py  sequence_labeling_metrics.py
texi/pytorch/models/: __init__.py  (+5 more)
texi/tagger/: __init__.py  sequence_labeling.py
(+58 files in other folders)
