[tool.poetry]
name = "texi"
version = "0.1.0"
description = "Text processing toolbox."
authors = ["Yevgnen Koh <wherejoystarts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyahocorasick = "^1.4.1"
ignite = "^1.1.0"
numpy = "^1.19.5"
plotly = "^4.14.3"
pytorch-crf = "^0.7.2"
pytorch-nlp = "^0.5.0"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
