[tool.poetry]
name = "texi"
version = "0.1.0"
description = "Text processing toolbox."
authors = ["Yevgnen Koh <wherejoystarts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyahocorasick = "^1.4.1"
ignite = "^1.1.0"
numpy = "^1.19.5"
pandas = "^1.2.1"
plotly = "^4.14.3"
pytorch-crf = "^0.7.2"
pytorch-nlp = "^0.5.0"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
jedi-language-server = "0.21.0"
nose2 = "^0.10.0"
pre-commit = "^2.10.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
