[tool.poetry]
name = "texi"
version = "0.1.0"
description = "Text processing toolbox."
authors = ["Yevgnen Koh <wherejoystarts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyahocorasick = "^1.4.1"
numpy = "^1.19.5"
pandas = "^1.2.1"
plotly = "^4.14.3"
pytorch-crf = "^0.7.2"
torch = "^1.7.1"
transformers = "^4.6.0"
pytorch-ignite = "^0.4.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
nose2 = "^0.10.0"
pre-commit = "^2.10.0"
pylint = "^2.6.0"
Sphinx = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
